--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@axe-core/puppeteer": "^4.10.2",
+    "@sparticuz/chromium-min": "^138.0.2",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.56.0",
     "axe-core": "^4.10.3",
     "next": "15.5.0",
     "openai": "^5.15.0",
     "playwright": "^1.55.0",
+    "puppeteer-core": "^24.17.0",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
