--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,8 @@
 {
   "functions": {
-    "app/api/scan/route.ts": { "memory": 1024, "maxDuration": 60 }
+    "app/api/scan/route.ts": {
+      "memory": 1536,
+      "maxDuration": 90
+    }
   }
 }
