fix: valid vercel.json includeFiles

--- a/vercel.json
+++ b/vercel.json
@@ -3,10 +3,7 @@
     "app/api/scan/route.ts": {
       "memory": 2048,
       "maxDuration": 120,
-      "includeFiles": [
-        "node_modules/@sparticuz/chromium/**",
-        "node_modules/@sparticuz/chromium/bin/**"
-      ]
+      "includeFiles": "node_modules/@sparticuz/chromium/**"
     }
   }
 }
