--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,10 @@
   "functions": {
     "app/api/scan/route.ts": {
       "maxDuration": 120,
-      "includeFiles": "node_modules/@sparticuz/chromium/**"
+      "includeFiles": [
+        "node_modules/@sparticuz/chromium/bin/**",
+        "node_modules/@sparticuz/chromium/build/**"
+      ]
     }
   }
 }
