--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,11 @@
+cat > vercel.json <<'EOF'
 {
   "functions": {
     "app/api/scan/route.ts": {
-      "maxDuration": 120
+      "maxDuration": 120,
+      "includeFiles": "node_modules/@sparticuz/chromium/**"
     }
   }
 }
+EOF
+
